webserver/deployments/a-b/webserver-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-b
  labels:
    app: webserver
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: webserver
      target: b
  template:
    metadata:
      labels:
        app: webserver
        target: b
    spec:
      containers:
      - name: webserver
        image: registry.straubcloud.de/webserver:v2
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-b
  labels:
    app: webserver
spec:
  selector:
    app: webserver
    target: b
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
